Clean up code based on Eclipse suggestions.